force-app/main/default/objects/vlocity_cmt__BusinessSite__c/vlocity_cmt__BusinessSite__c.object-meta.xml
<CustomObject>
    <description>Store Locations track the retail and customer service locations where customers may obtain products or services from your organization or your partner organizations. This information can be used to provide a Store Locator feature on a customer website. A store location advertises its location by address and geolocation as well as its hours of operation. Store locations are operated by a company brand or an authorized dealer which must be defined as a partner account or an internal organization account.</description>
    <label>Store Location</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Store Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>