force-app/main/default/objects/vlocity_cmt__BusinessSite__c/fields/vlocity_cmt__Geolocation__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Geolocation__c</fullName>
    <label>Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>