force-app/main/default/objects/vlocity_cmt__BusinessSite__c/fields/vlocity_cmt__OperatingHoursId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__OperatingHoursId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operating Hours</label>
    <referenceTo>vlocity_cmt__OperatingHours__c</referenceTo>
    <relationshipLabel>Store Locations</relationshipLabel>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>