force-app/main/default/objects/vlocity_cmt__BusinessSite__c/fields/vlocity_cmt__OrganizationId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__OrganizationId__c</fullName>
    <description>Defines the internal brand or authorized dealer that operates this store or customer service location.</description>
    <inlineHelpText>The internal brand or authorized dealer that operates this store.</inlineHelpText>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Store Locations</relationshipLabel>
    <relationshipName>OrganizationSites</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>