force-app/main/default/objects/vlocity_cmt__BusinessSite__c/fields/vlocity_cmt__PostalCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PostalCode__c</fullName>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>